#69 W.I.P. Parser Implementation